tests/toy/neg/000969_mutation.toylang
program a = { if a then int sleep; } .
